# wemg

./: .gitignore  pyproject.toml  requirements.txt
examples/: usage_example.py
wemg/: __init__.py  config.py  config.yaml  main.py
wemg/agents/: __init__.py  base_llm_agent.py  retriever_agent.py
wemg/agents/roles/: __init__.py  base_role.py  evaluator.py  extractor.py  generator.py  open_ie.py
wemg/agents/tools/: web_search.py  wikidata.py
wemg/configs/: redis.conf
wemg/profiling/: profile_execute_role.py  profile_execute_role_detailed.py  profile_generate_answer.py  profile_generate_answer_detailed.py  profile_generate_detailed.py  profile_generator_role_execute.py  profile_mcts_search.py  test_interaction_memory_optimization.py
wemg/runners/: __init__.py  base_reasoning_node.py  cot.py  interaction_memory.py  mcts.py  memory.py  procerduces.py  working_memory.py
wemg/runners/procedures/: __init__.py  base_role_execution.py  node_generator.py  openie.py  retrieval.py
wemg/runners/procerduces/: base_role_excercution.py  extraction.py  openie.py  retrieval.py
wemg/scripts/: start_redis_server.sh  stop_redis_sever.sh
wemg/test/: conftest.py  test_base_llm_agent.py  test_mcts.py  test_memory.py  test_node_generator.py  test_parsing.py  test_procedures.py  test_retrieval_procedure.py  test_retriever_agent.py  test_roles.py  test_runners.py  test_tools.py  test_wikidata_tools.py
wemg/utils/: __init__.py  caching.py  common.py  graph_utils.py  parsing.py  preprocessing.py
