[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wemg"
version = "0.1.0"
description = "WEMG - When Embedding Model Meet Graph RAG"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hieu Man", email = "hieum@uoregon.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "litellm>=1.79.1",
    "redis>=7.0.1",
    "hiredis>=3.3.0",
    "openai",
    "pydantic",
    "beautifulsoup4>=4.14.0",
    "lxml>=6.0.0",
    "requests>=2.31.0",
    "langchain-community>=0.3.0",
    "duckduckgo-search>=7.2.0",
    "ddgs>=9.8.0",
    "wikibase-rest-api-client>=0.1.3",
    "mediawikiapi>=1.2.2",
    "sparqlwrapper>=2.0.0",
    "faiss-cpu==1.12.0",
    "datasets==4.4.1",
    "networkx>=3.6.1",
    "torch>=2.0.0",
    "chromadb==1.3.7",
    "scikit-learn==1.8.0",
    "anytree==2.13.0",
    "nest-asyncio==1.6.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "sentence-transformers==5.2.0",
    "colorama==0.4.6",
    "matplotlib==3.10.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.21.0",
    "pip-chill>=1.0.3",
]

[project.urls]
Homepage = "https://github.com/yourusername/wemg"
Repository = "https://github.com/yourusername/wemg"

[tool.setuptools.packages.find]
where = ["."]
include = ["wemg*"]
exclude = ["test*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["wemg/test", "test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# Logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# Show all log messages (including DEBUG)
log_level = "DEBUG"
# Capture logging during tests
log_capture = true
